parser/SysYParserParser.cpp

// Generated from ./parser/SysYParser.g4 by ANTLR 4.9.3


#include "SysYParserListener.h"
#include "SysYParserVisitor.h"

#include "SysYParserParser.h"


using namespace antlrcpp;
using namespace antlr4;

SysYParserParser::SysYParserParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

SysYParserParser::~SysYParserParser() {
  delete _interpreter;
}

std::string SysYParserParser::getGrammarFileName() const {
  return "SysYParser.g4";
}

const std::vector<std::string>& SysYParserParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& SysYParserParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

SysYParserParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SysYParserParser::CompUnitContext* SysYParserParser::ProgramContext::compUnit() {
  return getRuleContext<SysYParserParser::CompUnitContext>(0);
}


size_t SysYParserParser::ProgramContext::getRuleIndex() const {
  return SysYParserParser::RuleProgram;
}

void SysYParserParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void SysYParserParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


antlrcpp::Any SysYParserParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SysYParserVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

SysYParserParser::ProgramContext* SysYParserParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, SysYParserParser::RuleProgram);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(72);
    compUnit();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CompUnitContext ------------------------------------------------------------------

SysYParserParser::CompUnitContext::CompUnitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SysYParserParser::CompUnitContext::EOF() {
  return getToken(SysYParserParser::EOF, 0);
}

std::vector<SysYParserParser::DeclContext *> SysYParserParser::CompUnitContext::decl() {
  return getRuleContexts<SysYParserParser::DeclContext>();
}

SysYParserParser::DeclContext* SysYParserParser::CompUnitContext::decl(size_t i) {
  return getRuleContext<SysYParserParser::DeclContext>(i);
}

std::vector<SysYParserParser::FuncDefContext *> SysYParserParser::CompUnitContext::funcDef() {
  return getRuleContexts<SysYParserParser::FuncDefContext>();
}

SysYParserParser::FuncDefContext* SysYParserParser::CompUnitContext::funcDef(size_t i) {
  return getRuleContext<SysYParserParser::FuncDefContext>(i);
}


size_t SysYParserParser::CompUnitContext::getRuleIndex() const {
  return SysYParserParser::RuleCompUnit;
}

void SysYParserParser::CompUnitContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCompUnit(this);
}

void SysYParserParser::CompUnitContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCompUnit(this);
}


antlrcpp::Any SysYParserParser::CompUnitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SysYParserVisitor*>(visitor))
    return parserVisitor->visitCompUnit(this);
  else
    return visitor->visitChildren(this);
}

SysYParserParser::CompUnitContext* SysYParserParser::compUnit() {
  CompUnitContext *_localctx = _tracker.createInstance<CompUnitContext>(_ctx, getState());
  enterRule(_localctx, 2, SysYParserParser::RuleCompUnit);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(78);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << SysYParserParser::T__0)
      | (1ULL << SysYParserParser::T__3)
      | (1ULL << SysYParserParser::T__4)
      | (1ULL << SysYParserParser::T__12))) != 0)) {
      setState(76);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
      case 1: {
        setState(74);
        decl();
        break;
      }

      case 2: {
        setState(75);
        funcDef();
        break;
      }

      default:
        break;
      }
      setState(80);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(81);
    match(SysYParserParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclContext ------------------------------------------------------------------

SysYParserParser::DeclContext::DeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SysYParserParser::ConstDeclContext* SysYParserParser::DeclContext::constDecl() {
  return getRuleContext<SysYParserParser::ConstDeclContext>(0);
}

SysYParserParser::VarDeclContext* SysYParserParser::DeclContext::varDecl() {
  return getRuleContext<SysYParserParser::VarDeclContext>(0);
}


size_t SysYParserParser::DeclContext::getRuleIndex() const {
  return SysYParserParser::RuleDecl;
}

void SysYParserParser::DeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDecl(this);
}

void SysYParserParser::DeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDecl(this);
}


antlrcpp::Any SysYParserParser::DeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SysYParserVisitor*>(visitor))
    return parserVisitor->visitDecl(this);
  else
    return visitor->visitChildren(this);
}

SysYParserParser::DeclContext* SysYParserParser::decl() {
  DeclContext *_localctx = _tracker.createInstance<DeclContext>(_ctx, getState());
  enterRule(_localctx, 4, SysYParserParser::RuleDecl);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(85);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case SysYParserParser::T__0: {
        enterOuterAlt(_localctx, 1);
        setState(83);
        constDecl();
        break;
      }

      case SysYParserParser::T__3:
      case SysYParserParser::T__4: {
        enterOuterAlt(_localctx, 2);
        setState(84);
        varDecl();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstDeclContext ------------------------------------------------------------------

SysYParserParser::ConstDeclContext::ConstDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SysYParserParser::BTypeContext* SysYParserParser::ConstDeclContext::bType() {
  return getRuleContext<SysYParserParser::BTypeContext>(0);
}

std::vector<SysYParserParser::ConstDefContext *> SysYParserParser::ConstDeclContext::constDef() {
  return getRuleContexts<SysYParserParser::ConstDefContext>();
}

SysYParserParser::ConstDefContext* SysYParserParser::ConstDeclContext::constDef(size_t i) {
  return getRuleContext<SysYParserParser::ConstDefContext>(i);
}


size_t SysYParserParser::ConstDeclContext::getRuleIndex() const {
  return SysYParserParser::RuleConstDecl;
}

void SysYParserParser::ConstDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConstDecl(this);
}

void SysYParserParser::ConstDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConstDecl(this);
}


antlrcpp::Any SysYParserParser::ConstDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SysYParserVisitor*>(visitor))
    return parserVisitor->visitConstDecl(this);
  else
    return visitor->visitChildren(this);
}

SysYParserParser::ConstDeclContext* SysYParserParser::constDecl() {
  ConstDeclContext *_localctx = _tracker.createInstance<ConstDeclContext>(_ctx, getState());
  enterRule(_localctx, 6, SysYParserParser::RuleConstDecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(87);
    match(SysYParserParser::T__0);
    setState(88);
    bType();
    setState(89);
    constDef();
    setState(94);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == SysYParserParser::T__1) {
      setState(90);
      match(SysYParserParser::T__1);
      setState(91);
      constDef();
      setState(96);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(97);
    match(SysYParserParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BTypeContext ------------------------------------------------------------------

SysYParserParser::BTypeContext::BTypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t SysYParserParser::BTypeContext::getRuleIndex() const {
  return SysYParserParser::RuleBType;
}

void SysYParserParser::BTypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBType(this);
}

void SysYParserParser::BTypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBType(this);
}


antlrcpp::Any SysYParserParser::BTypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SysYParserVisitor*>(visitor))
    return parserVisitor->visitBType(this);
  else
    return visitor->visitChildren(this);
}

SysYParserParser::BTypeContext* SysYParserParser::bType() {
  BTypeContext *_localctx = _tracker.createInstance<BTypeContext>(_ctx, getState());
  enterRule(_localctx, 8, SysYParserParser::RuleBType);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(99);
    _la = _input->LA(1);
    if (!(_la == SysYParserParser::T__3

    || _la == SysYParserParser::T__4)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstDefContext ------------------------------------------------------------------

SysYParserParser::ConstDefContext::ConstDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t SysYParserParser::ConstDefContext::getRuleIndex() const {
  return SysYParserParser::RuleConstDef;
}

void SysYParserParser::ConstDefContext::copyFrom(ConstDefContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ConstDefSingleContext ------------------------------------------------------------------

tree::TerminalNode* SysYParserParser::ConstDefSingleContext::Identifier() {
  return getToken(SysYParserParser::Identifier, 0);
}

SysYParserParser::ConstInitValContext* SysYParserParser::ConstDefSingleContext::constInitVal() {
  return getRuleContext<SysYParserParser::ConstInitValContext>(0);
}

SysYParserParser::ConstDefSingleContext::ConstDefSingleContext(ConstDefContext *ctx) { copyFrom(ctx); }

void SysYParserParser::ConstDefSingleContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConstDefSingle(this);
}
void SysYParserParser::ConstDefSingleContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConstDefSingle(this);
}

antlrcpp::Any SysYParserParser::ConstDefSingleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SysYParserVisitor*>(visitor))
    return parserVisitor->visitConstDefSingle(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ConstDefArrayContext ------------------------------------------------------------------

SysYParserParser::InitLValContext* SysYParserParser::ConstDefArrayContext::initLVal() {
  return getRuleContext<SysYParserParser::InitLValContext>(0);
}

SysYParserParser::ConstInitValContext* SysYParserParser::ConstDefArrayContext::constInitVal() {
  return getRuleContext<SysYParserParser::ConstInitValContext>(0);
}

SysYParserParser::ConstDefArrayContext::ConstDefArrayContext(ConstDefContext *ctx) { copyFrom(ctx); }

void SysYParserParser::ConstDefArrayContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConstDefArray(this);
}
void SysYParserParser::ConstDefArrayContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConstDefArray(this);
}

antlrcpp::Any SysYParserParser::ConstDefArrayContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SysYParserVisitor*>(visitor))
    return parserVisitor->visitConstDefArray(this);
  else
    return visitor->visitChildren(this);
}
SysYParserParser::ConstDefContext* SysYParserParser::constDef() {
  ConstDefContext *_localctx = _tracker.createInstance<ConstDefContext>(_ctx, getState());
  enterRule(_localctx, 10, SysYParserParser::RuleConstDef);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(108);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<SysYParserParser::ConstDefSingleContext>(_localctx);
      enterOuterAlt(_localctx, 1);
      setState(101);
      match(SysYParserParser::Identifier);
      setState(102);
      match(SysYParserParser::T__5);
      setState(103);
      constInitVal();
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<SysYParserParser::ConstDefArrayContext>(_localctx);
      enterOuterAlt(_localctx, 2);
      setState(104);
      initLVal();
      setState(105);
      match(SysYParserParser::T__5);
      setState(106);
      constInitVal();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstInitValContext ------------------------------------------------------------------

SysYParserParser::ConstInitValContext::ConstInitValContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t SysYParserParser::ConstInitValContext::getRuleIndex() const {
  return SysYParserParser::RuleConstInitVal;
}

void SysYParserParser::ConstInitValContext::copyFrom(ConstInitValContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ConstInitValSingleContext ------------------------------------------------------------------

SysYParserParser::ConstExpContext* SysYParserParser::ConstInitValSingleContext::constExp() {
  return getRuleContext<SysYParserParser::ConstExpContext>(0);
}

SysYParserParser::ConstInitValSingleContext::ConstInitValSingleContext(ConstInitValContext *ctx) { copyFrom(ctx); }

void SysYParserParser::ConstInitValSingleContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConstInitValSingle(this);
}
void SysYParserParser::ConstInitValSingleContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConstInitValSingle(this);
}

antlrcpp::Any SysYParserParser::ConstInitValSingleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SysYParserVisitor*>(visitor))
    return parserVisitor->visitConstInitValSingle(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ConstInitValArrayContext ------------------------------------------------------------------

std::vector<SysYParserParser::ConstInitValContext *> SysYParserParser::ConstInitValArrayContext::constInitVal() {
  return getRuleContexts<SysYParserParser::ConstInitValContext>();
}

SysYParserParser::ConstInitValContext* SysYParserParser::ConstInitValArrayContext::constInitVal(size_t i) {
  return getRuleContext<SysYParserParser::ConstInitValContext>(i);
}

SysYParserParser::ConstInitValArrayContext::ConstInitValArrayContext(ConstInitValContext *ctx) { copyFrom(ctx); }

void SysYParserParser::ConstInitValArrayContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConstInitValArray(this);
}
void SysYParserParser::ConstInitValArrayContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConstInitValArray(this);
}

antlrcpp::Any SysYParserParser::ConstInitValArrayContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SysYParserVisitor*>(visitor))
    return parserVisitor->visitConstInitValArray(this);
  else
    return visitor->visitChildren(this);
}
SysYParserParser::ConstInitValContext* SysYParserParser::constInitVal() {
  ConstInitValContext *_localctx = _tracker.createInstance<ConstInitValContext>(_ctx, getState());
  enterRule(_localctx, 12, SysYParserParser::RuleConstInitVal);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(123);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case SysYParserParser::T__10:
      case SysYParserParser::T__19:
      case SysYParserParser::T__20:
      case SysYParserParser::T__21:
      case SysYParserParser::Identifier:
      case SysYParserParser::DecimalConstant:
      case SysYParserParser::OctalConstant:
      case SysYParserParser::HexadecimalConstant:
      case SysYParserParser::FloatingConstant: {
        _localctx = _tracker.createInstance<SysYParserParser::ConstInitValSingleContext>(_localctx);
        enterOuterAlt(_localctx, 1);
        setState(110);
        constExp();
        break;
      }

      case SysYParserParser::T__6: {
        _localctx = _tracker.createInstance<SysYParserParser::ConstInitValArrayContext>(_localctx);
        enterOuterAlt(_localctx, 2);
        setState(111);
        match(SysYParserParser::T__6);
        setState(120);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if ((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & ((1ULL << SysYParserParser::T__6)
          | (1ULL << SysYParserParser::T__10)
          | (1ULL << SysYParserParser::T__19)
          | (1ULL << SysYParserParser::T__20)
          | (1ULL << SysYParserParser::T__21)
          | (1ULL << SysYParserParser::Identifier)
          | (1ULL << SysYParserParser::DecimalConstant)
          | (1ULL << SysYParserParser::OctalConstant)
          | (1ULL << SysYParserParser::HexadecimalConstant)
          | (1ULL << SysYParserParser::FloatingConstant))) != 0)) {
          setState(112);
          constInitVal();
          setState(117);
          _errHandler->sync(this);
          _la = _input->LA(1);
          while (_la == SysYParserParser::T__1) {
            setState(113);
            match(SysYParserParser::T__1);
            setState(114);
            constInitVal();
            setState(119);
            _errHandler->sync(this);
            _la = _input->LA(1);
          }
        }
        setState(122);
        match(SysYParserParser::T__7);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarDeclContext ------------------------------------------------------------------

SysYParserParser::VarDeclContext::VarDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SysYParserParser::BTypeContext* SysYParserParser::VarDeclContext::bType() {
  return getRuleContext<SysYParserParser::BTypeContext>(0);
}

std::vector<SysYParserParser::VarDefContext *> SysYParserParser::VarDeclContext::varDef() {
  return getRuleContexts<SysYParserParser::VarDefContext>();
}

SysYParserParser::VarDefContext* SysYParserParser::VarDeclContext::varDef(size_t i) {
  return getRuleContext<SysYParserParser::VarDefContext>(i);
}


size_t SysYParserParser::VarDeclContext::getRuleIndex() const {
  return SysYParserParser::RuleVarDecl;
}

void SysYParserParser::VarDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVarDecl(this);
}

void SysYParserParser::VarDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVarDecl(this);
}


antlrcpp::Any SysYParserParser::VarDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SysYParserVisitor*>(visitor))
    return parserVisitor->visitVarDecl(this);
  else
    return visitor->visitChildren(this);
}

SysYParserParser::VarDeclContext* SysYParserParser::varDecl() {
  VarDeclContext *_localctx = _tracker.createInstance<VarDeclContext>(_ctx, getState());
  enterRule(_localctx, 14, SysYParserParser::RuleVarDecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(125);
    bType();
    setState(126);
    varDef();
    setState(131);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == SysYParserParser::T__1) {
      setState(127);
      match(SysYParserParser::T__1);
      setState(128);
      varDef();
      setState(133);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(134);
    match(SysYParserParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarDefContext ------------------------------------------------------------------

SysYParserParser::VarDefContext::VarDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t SysYParserParser::VarDefContext::getRuleIndex() const {
  return SysYParserParser::RuleVarDef;
}

void SysYParserParser::VarDefContext::copyFrom(VarDefContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- VarDefSingleInitValContext ------------------------------------------------------------------

tree::TerminalNode* SysYParserParser::VarDefSingleInitValContext::Identifier() {
  return getToken(SysYParserParser::Identifier, 0);
}

SysYParserParser::InitValContext* SysYParserParser::VarDefSingleInitValContext::initVal() {
  return getRuleContext<SysYParserParser::InitValContext>(0);
}

SysYParserParser::VarDefSingleInitValContext::VarDefSingleInitValContext(VarDefContext *ctx) { copyFrom(ctx); }

void SysYParserParser::VarDefSingleInitValContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVarDefSingleInitVal(this);
}
void SysYParserParser::VarDefSingleInitValContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SysYParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVarDefSingleInitVal(this);
}

antlrcpp::Any SysYParserParser::VarDefSingleInitValContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SysYParserVisitor*>(visitor))
    return parserVisitor->visitVarDefSingleInitVal(this);
  else
    return visitor->visitChildren(this);
}
//----------------- VarDefArrayInitValContext ------------------------------------------------------------------

SysYParserParser::InitLValContext* SysYParserParser::VarDefArrayInitValContext::initLVal() {
  return getRuleContext<SysYParserParser::InitLValContext>(0);
}
